fixed misalignment

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -47,7 +47,7 @@ ul {
 .page {
   width: 100%;
   height: 100%;
-  margin-top: 55px;
+  margin-top: 54px;
   background-color: lightgray;
   border-radius: 3px;
   min-height: 148px;
